--- a/index.html
+++ b/index.html
@@ -6,13 +6,75 @@
 		<title>ActionFunClick!!!</title>
 
 		<style type="text/css" media="screen">
+			body {
+				background-color: #9999aa;
+			}
+
+			div.gamearea {
+			 width: 100%;
+			 height: 75vh;
+			 background-color: #aaccaa;
+			 padding: 1vh;
+			 margin: 0;
+			}
+
 			div.thing {
-				border: 1px solid #eee;
-				height: 5vh;
-				width: 7.5vw;
 				padding: 0.7vw;
+				height: 5vh;
+				width: 15.5vw;
+				transition: all 900ms ease-in-out;
+			}
+
+			div.thing span.m {
+				border: 1px solid #eee;
 				background-color: #dddddd;
-				transition: margin 700ms ease-in-out;
+				border-radius: 1vh;
+				padding: 0.3vh;
+				position: relative;
+				bottom: 2vh;
+			}
+
+			div.thing span.u {
+				display: inline-block;
+				transform: scaleX(-1);
+				font-size: 4vw;
+				color: grey;
+			}
+
+			h1 {
+				padding: 1em;
+			}
+
+			body.start h1 {
+				background-color: #ccaa99;
+				border: 3px dotted #336699;
+			}
+
+			body.win h1 {
+				color: #eee;
+				background-color: #999;
+			}
+
+			body.lose {
+				color: red;
+				background-color: #cc9999;
+			}
+
+			body.lose h1 {
+				color: red;
+				background-color: pink;
+			}
+
+			body.lose .thing {
+				color: red;
+				background-color: red;
+				width: 0;
+				height: 0;
+				display: none;
+			}
+
+			body.lose .thing {
+				font-size: 0;
 			}
 		</style>
 
@@ -80,7 +142,7 @@
 				document.onmousemove = null;
 				document.onclick = null;
 				document.querySelector("h1").innerHTML = `YOU ${message.toUpperCase()}!`;
-				document.querySelector("h1").classList = [message];
+				document.querySelector("body").classList = [message];
 			};
 
 			const setup = () => {
@@ -88,7 +150,7 @@
 				document.onclick = depress(-25);
 
 				[...document.querySelectorAll(".thing")].forEach((thing) => {
-					thing.style["margin"] = "1vh 1vw 1vh 1vw";
+					thing.style["margin"] = "2vh 1vw 2vh 1vw";
 					thing.onclick = loseFaster(thing, 17);
 					things.push(thing)
 				});
@@ -97,23 +159,23 @@
 			};
 		</script>
 	</head>
-	<body onload="setup();" style="font-family: Comic,Helvetica,Arial">
+	<body onload="setup();" class="start" style="font-family: Comic,Helvetica,Arial">
 		<div style="display: flex; flex-direction: row; justify-content: space-around">
-			<h1 style="background-color: pink; padding: 1em; border: 3px dotted green">Click to win!</h1>
+			<h1 class="start">Click to win!</h1>
 			<div>
 				<h2 style="font-family: monospace; font-size: 1.5vw">WASD keys to move</h2>
 				<h2 style="font-family: monospace; font-size: 1.5vw">Score: <span id="score">0</span></h2>
 			</div>
 		</div>
-		<div id="gamearea" style="width: 100%; height: 75vh; background-color: #aaccaa; padding: 1vh; margin: 0;" >
-			<div class="thing" id="thing1" z-index="1"> Click me! </div>
-			<div class="thing" id="thing2" z-index="2"> Click me! </div>
-			<div class="thing" id="thing3" z-index="3"> Click me! </div>
-			<div class="thing" id="thing4" z-index="4"> Click me! </div>
-			<div class="thing" id="thing5" z-index="5"> Click me! </div>
-			<div class="thing" id="thing6" z-index="6"> Click me! </div>
-			<div class="thing" id="thing7" z-index="7"> Click me! </div>
-			<div class="thing" id="thing8" z-index="8"> Click me! </div>
+		<div id="gamearea">
+			<div class="thing" id="thing1" z-index="1"><span class="u">🦄</span> <span class="m">Click me!</span> </div>
+			<div class="thing" id="thing2" z-index="2"><span class="u">🦄</span> <span class="m">Click me!</span> </div>
+			<div class="thing" id="thing3" z-index="3"><span class="u">🦄</span> <span class="m">Click me!</span> </div>
+			<div class="thing" id="thing4" z-index="4"><span class="u">🦄</span> <span class="m">Click me!</span> </div>
+			<div class="thing" id="thing5" z-index="5"><span class="u">🦄</span> <span class="m">Click me!</span> </div>
+			<div class="thing" id="thing6" z-index="6"><span class="u">🦄</span> <span class="m">Click me!</span> </div>
+			<div class="thing" id="thing7" z-index="7"><span class="u">🦄</span> <span class="m">Click me!</span> </div>
+			<div class="thing" id="thing8" z-index="8"><span class="u">🦄</span> <span class="m">Click me!</span> </div>
 		</div>
 	</body>
 </html>
