Grey out icons on win

--- a/index.html
+++ b/index.html
@@ -74,6 +74,14 @@
 				display: none;
 			}
 
+			body.win .thing span {
+				color: #ccc;
+				background-color: transparent;
+				opacity: 0.22;
+				background-color: #ccc;
+				text-shadow: 0 0 #999;
+			}
+
 		</style>
 
 		<script charset="utf-8">
