--- a/index.html
+++ b/index.html
@@ -186,14 +186,14 @@
 			</div>
 		</div>
 		<div id="gamearea">
-			<div class="thing" id="thing1" z-index="1"><span class="u">🦄</span> <span class="m">Click me!</span> </div>
-			<div class="thing" id="thing2" z-index="2"><span class="u">🦄</span> <span class="m">Click me!</span> </div>
-			<div class="thing" id="thing3" z-index="3"><span class="u">🦄</span> <span class="m">Click me!</span> </div>
-			<div class="thing" id="thing4" z-index="4"><span class="u">🦄</span> <span class="m">Click me!</span> </div>
-			<div class="thing" id="thing5" z-index="5"><span class="u">🦄</span> <span class="m">Click me!</span> </div>
-			<div class="thing" id="thing6" z-index="6"><span class="u">🦄</span> <span class="m">Click me!</span> </div>
-			<div class="thing" id="thing7" z-index="7"><span class="u">🦄</span> <span class="m">Click me!</span> </div>
-			<div class="thing" id="thing8" z-index="8"><span class="u">🦄</span> <span class="m">Click me!</span> </div>
+			<div class="thing" id="thing1"><span class="u">🦄</span> <span class="m">Click me!</span> </div>
+			<div class="thing" id="thing2"><span class="u">🦄</span> <span class="m">Click me!</span> </div>
+			<div class="thing" id="thing3"><span class="u">🦄</span> <span class="m">Click me!</span> </div>
+			<div class="thing" id="thing4"><span class="u">🦄</span> <span class="m">Click me!</span> </div>
+			<div class="thing" id="thing5"><span class="u">🦄</span> <span class="m">Click me!</span> </div>
+			<div class="thing" id="thing6"><span class="u">🦄</span> <span class="m">Click me!</span> </div>
+			<div class="thing" id="thing7"><span class="u">🦄</span> <span class="m">Click me!</span> </div>
+			<div class="thing" id="thing8"><span class="u">🦄</span> <span class="m">Click me!</span> </div>
 		</div>
 	</body>
 </html>
