--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<style type="text/css" media="screen">
 			body {
 				background-color: #9999aa;
+				font-family: Helvetica, Arial;
 			}
 
 			div.gamearea {
@@ -177,7 +178,7 @@
 			};
 		</script>
 	</head>
-	<body onload="setup();" class="start" style="font-family: Comic,Helvetica,Arial">
+	<body onload="setup();" class="start">
 		<div style="display: flex; flex-direction: row; justify-content: space-around">
 			<h1 class="start">Click to win!</h1>
 			<div>
