--- a/index.html
+++ b/index.html
@@ -68,11 +68,18 @@
 
 			body.lose .thing {
 				color: red;
+				opacity: 0.11;
 				background-color: red;
 				font-size: 0;
 				width: 0;
 				height: 0;
-				display: none;
+				margin: 0;
+				transition: all 1300ms ease-in-out;
+			}
+
+			body.lose .thing span.u {
+				transform: rotate(180deg);
+				transition: all 1300ms ease-in-out;
 			}
 
 			body.win .thing span {
