--- a/index.html
+++ b/index.html
@@ -19,6 +19,18 @@
 			 margin: 0;
 			}
 
+			div.start-button {
+				padding: 1.5vw;
+			}
+
+			button {
+				height: 100%;
+				width: 10vw;
+				font-size: 1.5vw;
+				font-weight: 700;
+				background-color: #aabfaa;
+			}
+
 			div.thing {
 				padding: 0.7vw;
 				height: 5vh;
@@ -149,14 +161,15 @@
 				thing.style["margin-left"] = margin;
 			}
 
-			const win = () => end("win");
-			const lose = () => end("lose");
+			const start = () => end("start", "Click to win!");
+			const win = () => end("win", "you win.");
+			const lose = () => end("lose", "***YOU LOSE!!!***");
 
-			const end = (message) => {
+			const end = (class_name, message) => {
 				document.onmousemove = null;
 				document.onclick = null;
-				document.querySelector("h1").innerHTML = `YOU ${message.toUpperCase()}!`;
-				document.querySelector("body").classList = [message];
+				document.querySelector("h1").innerHTML = message;
+				document.querySelector("body").classList = [class_name];
 			};
 
 			const loseFasterIfWasd = (e) => {
@@ -181,13 +194,16 @@
 					things.push(thing)
 				});
 
-				setTimeout(loop, loopTimer);
+				timer = setTimeout(loop, loopTimer);
 			};
 		</script>
 	</head>
-	<body onload="setup();" class="start">
+	<body class="start">
 		<div style="display: flex; flex-direction: row; justify-content: space-around">
 			<h1 class="start">Click to win!</h1>
+			<div class="start-button">
+				<button id="start" type="button" onclick="setup();">Start</button>
+			</div>
 			<div>
 				<h2 style="font-family: monospace; font-size: 1.5vw">WASD keys to move</h2>
 				<h2 style="font-family: monospace; font-size: 1.5vw">Score: <span id="score">0</span></h2>
